syntax = "proto3";
option java_multiple_files = true;
option java_package = "io.codebyexample.serviced.proto.v1";
package io.codebyexample.serviced.proto.v1;

service ServiceD {
  rpc CallMethodD (DRequest) returns (DResponse);
}

message DRequest {
  int32 id = 1;
}

message DResponse {
  string message = 1;
}